2008-01-03  Werner Koch  <wk@g10code.com>

	* src/inst-gnupg.nsi: Do not set gpgProgram but delete it.

	* patches/gpgme/01-gpg2.patch: New.
	* Makefile.am (EXTRA_DIST): Add it.

	* src/gpg4win.mk.in (SETVARS): Add new var PKGPBDIR.
	(SPKG_template) <stamps/stamp-$(1)-01-patch>: Allow for patches
	without the version name of the package.
	(MPKG_template) <stamps/stamp-$(1)-01-patch>: Ditto.

	* packages/packages.current: Fix pinentry name.  Use gpgol svn 205.
	Update to gnupg 1.48 and 2.0.8.

2008-01-02  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update pinentry to 0.7.5-cvs.

	* src/pkg-config (PREFIX): Suppress debug output.

	* src/Makefile.am (gpg4win_pkg_glib_post_install): Since we build
	the package from source, we need to fix up the pkg-config files in
	the runtime package directory.

2007-12-21  Marcus Brinkmann  <marcus@g10code.de>

	* src/uninst-kleopatra.nsi, src/inst-kleopatra.nsi: Update to
	latest version.

	* packages/packages.current: Update oxygen-icons and kleopatra.
	* src/inst-oxygen-icons.nsi, src/uninst-oxygen-icons.nsi: Update
	to latest version, but only install 16x16 icons (now all of them).

2007-12-18  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update kleopatra to 20071214-3.
	* src/inst-kleopatra.nsi: Adjust path to GPGME libraries.

2007-12-14  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update to gnupg-2.0.8rc1.

2007-12-14  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Fix last change.

2007-12-13  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update libassuan.

2007-12-11  Marcus Brinkmann  <marcus@g10code.de>

	* packages/packages.current: Update to qt 4.3.3.
	* src/inst-qt.nsi, src/uninst-qt.nsi: Update to qt 4.3.3.

	* src/inst-sections.nsi: Delete old start menu, desktop and
	quicklaunch links.

2007-12-10  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libgcrypt.
