@@ -1,3 +1,8 @@
+2008-01-04  Marcus Brinkmann  <marcus@g10code.de>
+
+	* packages/packages.current: Update gpgme to 1.1.6.
+	* patches/gpgme/01-gpg2.patch: Update patch.
+
 2008-01-03  Werner Koch  <wk@g10code.com>
 
 	* src/inst-gnupg.nsi: Do not set gpgProgram but delete it.
